<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Quake Report+</string>
    <string name="near_the">Near the</string>

    <!-- EmptyState Message When No Item is available-->
    <string name="no_earthquakes">No earthquakes found.</string>

    <!-- EmptyState Message when there is no internet connection -->
    <string name="no_internet_connection">No internet connection</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Strings for No of Earthquakes Preference [CHAR LIMIT=20] -->
    <string name="setting_min_noOfEarthquake_label">Show Earthquakes</string>
    <string name="setting_min_noOfEarthquake_key" translatable="false">limit</string>
    <string name="setting_min_noOfEarthquake_default" translatable="false">15</string>

</resources>
