<?xml version="1.0" encoding="utf-8"?>
<!-- PreferenceScreen object for showing settings menu in SettingsActivity/EarthquakePreferenceManager -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/setting_min_noOfEarthquake_default"
        android:inputType="numberDecimal"
        android:key="@string/setting_min_noOfEarthquake_key"
        android:selectAllOnFocus="true"
        android:title="@string/setting_min_noOfEarthquake_label" />

</PreferenceScreen>